--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -1,6 +1,4 @@
 /* AppComponent's private CSS styles */
-
-
 h1 {
   font-size: 1.2em;
   color: #999;
@@ -29,4 +27,8 @@ nav a:hover {
 }
 nav a.active {
   color: #039be5;
+}
+
+.contact_us{
+  color: #ec6611;
 }
