trade commit for header

--- a/angular/src/app/homepage/homepage.component.html
+++ b/angular/src/app/homepage/homepage.component.html
@@ -1,1 +1,7 @@
-<p>homepage works!</p>
+<div class="container">
+<div class="content">
+    <div class="title"><mat-card-title> {{title}}</mat-card-title></div>
+<div class="subtitle">
+<mat-card-subtitle >{{subtitle}}</mat-card-subtitle></div>
+</div>
+</div>
