--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -2,11 +2,9 @@
   <header class="container">
     <nav class="content">
       <img class="logo" src="https://d3ginfw2u4xn7p.cloudfront.net/55dee66e3a994586a84ed37ae8ee1210/images/Packt-logo-135.png" alt>
-      <div class="contact_us">Contact Us</div>
-      <button mat-button style="color:white">Click me!</button>
+      <button mat-button class="contact_us">Contact Us</button>
     </nav>
   </header>
-
   <router-outlet></router-outlet>
 
 </div>
