header and footer for the trade page

--- a/angular/src/app/homepage/homepage.component.html
+++ b/angular/src/app/homepage/homepage.component.html
@@ -1,7 +1,3 @@
-<div class="container">
-<div class="content">
-    <div class="title"><mat-card-title> {{title}}</mat-card-title></div>
-<div class="subtitle">
-<mat-card-subtitle >{{subtitle}}</mat-card-subtitle></div>
-</div>
-</div>
+
+<app-top-banner></app-top-banner>
+<app-placeholders></app-placeholders>
