header and footer for the trade page-1

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,10 +1,5 @@
 <div class="main-content">
-  <header class="container">
-    <nav class="content">
-      <img class="logo" src="https://d3ginfw2u4xn7p.cloudfront.net/55dee66e3a994586a84ed37ae8ee1210/images/Packt-logo-135.png" alt>
-      <button mat-button class="contact_us">Contact Us</button>
-    </nav>
-  </header>
+  <app-header></app-header>
   <router-outlet></router-outlet>
-
+  <app-footer></app-footer>
 </div>
