--- a/angular/src/app/footer/footer.component.html
+++ b/angular/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="container">
   <div class="content">
-    <div class="col-md-4">
+    <div class="col-md-4 footer_content">
       <h3 class="useful_links_title">Useful Links</h3>
       <ul class="useful_links">
         <li *ngFor="let useful_link of useful_links">
@@ -8,7 +8,7 @@
         </li>
       </ul>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 footer_content">
       <h3 class="help_supports_title">Help & Support</h3>
       <ul class="help_supports">
         <li *ngFor="let help_support of help_supports">
@@ -16,7 +16,7 @@
         </li>
       </ul>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 footer_content">
       <div class="social">
         <h3 class="socials_title">Social</h3>
         <ul class="socials">
