--- a/angular/src/app/homepage/homepage.component.html
+++ b/angular/src/app/homepage/homepage.component.html
@@ -1,3 +1,5 @@
 
-<app-top-banner></app-top-banner>
-<app-placeholders></app-placeholders>
+  <div><app-top-banner></app-top-banner></div>
+  <div><app-login-signup-form></app-login-signup-form></div>
+  <div><app-placeholders></app-placeholders></div>
+
