--- a/angular/src/app/homepage/login-signup-form/login-signup-form.component.html
+++ b/angular/src/app/homepage/login-signup-form/login-signup-form.component.html
@@ -34,7 +34,7 @@
             type="password"
             class="form-control"
             id="password"
-            placeholder="Enter email"
+            placeholder="Enter password"
             formControlName="password"
           />
         </p>
