--- a/angular/src/app/shared/header/header.component.html
+++ b/angular/src/app/shared/header/header.component.html
@@ -4,5 +4,6 @@
           <img class="logo" src="https://d3ginfw2u4xn7p.cloudfront.net/55dee66e3a994586a84ed37ae8ee1210/images/Packt-logo-135.png" alt>
         </strong>
           <button mat-button class="contact_us">Contact Us</button>
+          <button mat-button class="contact_us" (click) ="logout()" *ngIf="currentUser">Log Out</button>
         </nav>
       </header>
