--- a/angular/src/app/shared/header/header.component.scss
+++ b/angular/src/app/shared/header/header.component.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables";
+@import "../../../styles/variables";
 header {
   background-color: rgb(60, 60, 59);
   height: 75px;
