--- a/angular/src/app/user/loginpage/login-signup-form/login-signup-form.component.scss
+++ b/angular/src/app/user/loginpage/login-signup-form/login-signup-form.component.scss
@@ -1,6 +1,6 @@
-@import "../../../styles/variables";
+@import "../../../../styles/variables";
 .content{
-    padding: 20px 0 20px 0;
+    padding: 20px 20px 20px 0;
 }
 
 .login-container{
@@ -8,7 +8,7 @@
 }
 
 .form-group{
-    width:25% ;
+    width:30% ;
     margin-left:auto;
 }
 .title{
@@ -23,6 +23,11 @@
     background-color:$primary-color;
     font-weight: 700;
     color: $white;
+}
+
+.register
+{
+    margin-left: 10px;
 }
 
 .help-block{
