--- a/angular/src/app/user/loginpage/top-banner/top-banner.component.scss
+++ b/angular/src/app/user/loginpage/top-banner/top-banner.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables";
+@import "../../../../styles/variables";
 .top-banner{
     text-align: center;
     margin : 20px 0 0 0;
