scss changes and alert component

--- a/angular/src/app/welcomepage/welcomepage.component.html
+++ b/angular/src/app/welcomepage/welcomepage.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="content">
     <div class="top-banner">
-      <mat-card-title class="title"> {{ title }}</mat-card-title>
+      <mat-card-title class="title"> {{ title }} {{currentUser.firstname}}!</mat-card-title>
     </div>
   </div>
 </div>
