--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="main-content">
   <app-header></app-header>
+      <alert></alert>
   <div  class="router">
   <router-outlet></router-outlet>
 </div>
