--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -24,6 +24,7 @@ nav a.active {
 }
 
 .router{
+  position: relative;
   display: flex;
       flex-direction: column;
       min-height: -webkit-fill-available;
