--- a/angular/src/app/user/login-signup-form/login-signup-form.component.html
+++ b/angular/src/app/user/login-signup-form/login-signup-form.component.html
@@ -27,6 +27,7 @@
         <div *ngIf="formControls.email.errors.required">
           Email is required
         </div>
+        <div *ngIf="formControls.email.errors.email">Email must be a valid email address</div>
       </div>
       <div class="form-group">
         <p
