--- a/angular/src/app/user/registration/registration.component.html
+++ b/angular/src/app/user/registration/registration.component.html
@@ -6,6 +6,7 @@
       class="register-container"
       (ngSubmit)="onSubmit()"
     >
+    <div class="personal_details">
       <div class="form-group">
         <label for="firstName" class="firstname_title">First Name</label>
         <input
@@ -44,6 +45,8 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="registration_details">
       <div class="form-group">
         <label for="email" class="email_title">Email</label>
         <input
@@ -56,7 +59,9 @@
           <div *ngIf="formControls.email.errors.required">
             Email is required
           </div>
-          <div *ngIf="formControls.email.errors.email">Email must be a valid email address</div>
+          <div *ngIf="formControls.email.errors.email">
+            Email must be a valid email address
+          </div>
         </div>
       </div>
       <div class="form-group">
@@ -69,7 +74,10 @@
             'is-invalid': submitted && formControls.password.errors
           }"
         />
-        <div *ngIf="submitted && formControls.password.errors"  class=" help-block">
+        <div
+          *ngIf="submitted && formControls.password.errors"
+          class=" help-block"
+        >
           <div
             *ngIf="formControls.password.errors.required"
             class=" help-block"
@@ -90,20 +98,29 @@
           type="password"
           formControlName="confirmpassword"
           class="form-control"
-          [ngClass]="{ 'is-invalid': submitted && formControls.confirmpassword.errors }"
+          [ngClass]="{
+            'is-invalid': submitted && formControls.confirmpassword.errors
+          }"
         />
         <div
           *ngIf="submitted && formControls.confirmpassword.errors"
           class="invalid-feedback"
         >
-          <div *ngIf="formControls.confirmpassword.errors.required" class=" help-block">
+          <div
+            *ngIf="formControls.confirmpassword.errors.required"
+            class=" help-block"
+          >
             Confirm Password is required
           </div>
-          <div *ngIf="formControls.confirmpassword.errors.mustMatch" class=" help-block">
+          <div
+            *ngIf="formControls.confirmpassword.errors.mustMatch"
+            class=" help-block"
+          >
             Passwords must match
           </div>
         </div>
       </div>
+    </div>
       <button type="submit" class="btn">Register</button>
       <button type="submit" class="btn cancel" routerLink="/login">
         Cancel
