--- a/angular/src/app/user/registration/registration.component.html
+++ b/angular/src/app/user/registration/registration.component.html
@@ -3,124 +3,178 @@
     <h2>{{ title }}</h2>
     <form
       [formGroup]="registerForm"
-      class="register-container"
+      class="register-container row"
       (ngSubmit)="onSubmit()"
     >
-    <div class="personal_details">
-      <div class="form-group">
-        <label for="firstName" class="firstname_title">First Name</label>
-        <input
-          type="text"
-          formControlName="firstName"
-          class="form-control"
-          [ngClass]="{
-            'is-invalid': submitted && formControls.firstName.errors
-          }"
-        />
-        <div
-          *ngIf="submitted && formControls.firstName.errors"
-          class="  help-block"
-        >
-          <div *ngIf="formControls.firstName.errors.required">
-            Firstname is required
+      <div class="personal_details col-md-6">
+        <label class="header_title">
+          Personal Details
+        </label>
+        <div class="section">
+            <div class="form-group">
+                <label for="nametitle" class="section_title"> Title</label>
+                <select class="form-control"
+                [ngClass]="{
+                  'is-invalid': submitted && formControls.title.errors
+                }"
+                formControlName="title">
+                    <option value="" disabled>Choose your title</option>
+                    <option>Mr.</option>
+                    <option>Mrs.</option>
+                    <option>Miss.</option>
+                    <option>Dr.</option>
+                    <option>Ms.</option>
+                 </select>
+
+                <div
+                  *ngIf="submitted && formControls.title.errors"
+                  class="  help-block"
+                >
+                  <div *ngIf="formControls.title.errors.required">
+                    Title is required
+                  </div>
+                </div>
+              </div>
+          <div class="form-group">
+            <label for="firstName" class="section_title">First Name</label>
+            <input
+              type="text"
+              formControlName="firstName"
+              class="form-control"
+              [ngClass]="{
+                'is-invalid': submitted && formControls.firstName.errors
+              }"
+            />
+            <div
+              *ngIf="submitted && formControls.firstName.errors"
+              class="  help-block"
+            >
+              <div *ngIf="formControls.firstName.errors.required">
+                Firstname is required
+              </div>
+            </div>
           </div>
+          <div class="form-group">
+            <label for="lastName" class="section_title">Last Name</label>
+            <input
+              type="text"
+              formControlName="lastName"
+              class="form-control"
+              [ngClass]="{
+                'is-invalid': submitted && formControls.lastName.errors
+              }"
+            />
+            <div
+              *ngIf="submitted && formControls.lastName.errors"
+              class="  help-block"
+            >
+              <div *ngIf="formControls.lastName.errors.required">
+                Lastname is required
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+              <label for="businessName" class="section_title">Business Name</label>
+              <input
+                type="text"
+                formControlName="businessName"
+                class="form-control"
+                [ngClass]="{
+                  'is-invalid': submitted && formControls.businessName.errors
+                }"
+              />
+              <div
+                *ngIf="submitted && formControls.businessName.errors"
+                class="  help-block"
+              >
+                <div *ngIf="formControls.businessName.errors.required">
+                    BusinessName is required
+                </div>
+              </div>
+            </div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="lastName" class="lastname_title">Last Name</label>
-        <input
-          type="text"
-          formControlName="lastName"
-          class="form-control"
-          [ngClass]="{
-            'is-invalid': submitted && formControls.lastName.errors
-          }"
-        />
-        <div
-          *ngIf="submitted && formControls.lastName.errors"
-          class="  help-block"
-        >
-          <div *ngIf="formControls.lastName.errors.required">
-            Lastname is required
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="registration_details">
-      <div class="form-group">
-        <label for="email" class="email_title">Email</label>
-        <input
-          type="text"
-          formControlName="email"
-          class="form-control"
-          [ngClass]="{ 'is-invalid': submitted && formControls.email.errors }"
-        />
-        <div *ngIf="submitted && formControls.email.errors" class=" help-block">
-          <div *ngIf="formControls.email.errors.required">
-            Email is required
-          </div>
-          <div *ngIf="formControls.email.errors.email">
-            Email must be a valid email address
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="password" class="password_title">Password</label>
-        <input
-          type="text"
-          formControlName="password"
-          class="form-control"
-          [ngClass]="{
-            'is-invalid': submitted && formControls.password.errors
-          }"
-        />
-        <div
-          *ngIf="submitted && formControls.password.errors"
-          class=" help-block"
-        >
+      <div class="registration_details col-md-6">
+        <label class="header_title">
+          Registration Details
+        </label>
+        <div class="form-group">
+          <label for="email" class="section_title">Email</label>
+          <input
+            type="text"
+            formControlName="email"
+            class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && formControls.email.errors }"
+          />
           <div
-            *ngIf="formControls.password.errors.required"
+            *ngIf="submitted && formControls.email.errors"
             class=" help-block"
           >
-            Password is required
+            <div *ngIf="formControls.email.errors.required">
+              Email is required
+            </div>
+            <div *ngIf="formControls.email.errors.email">
+              Email must be a valid email address
+            </div>
           </div>
+        </div>
+        <div class="form-group">
+          <label for="password" class="section_title">Password</label>
+          <input
+            type="text"
+            formControlName="password"
+            class="form-control"
+            [ngClass]="{
+              'is-invalid': submitted && formControls.password.errors
+            }"
+          />
           <div
-            *ngIf="formControls.password.errors.minlength"
+            *ngIf="submitted && formControls.password.errors"
             class=" help-block"
           >
-            Password must be at least 6 characters
+            <div
+              *ngIf="formControls.password.errors.required"
+              class=" help-block"
+            >
+              Password is required
+            </div>
+            <div
+              *ngIf="formControls.password.errors.minlength"
+              class=" help-block"
+            >
+              Password must be at least 6 characters
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="password" class="section_title">Confirm Password</label>
+          <input
+            type="password"
+            formControlName="confirmpassword"
+            class="form-control"
+            [ngClass]="{
+              'is-invalid': submitted && formControls.confirmpassword.errors
+            }"
+          />
+          <div
+            *ngIf="submitted && formControls.confirmpassword.errors"
+            class="invalid-feedback"
+          >
+            <div
+              *ngIf="formControls.confirmpassword.errors.required"
+              class=" help-block"
+            >
+              Confirm Password is required
+            </div>
+            <div
+              *ngIf="formControls.confirmpassword.errors.mustMatch"
+              class=" help-block"
+            >
+              Passwords must match
+            </div>
           </div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="password" class="password_title">Confirm Password</label>
-        <input
-          type="password"
-          formControlName="confirmpassword"
-          class="form-control"
-          [ngClass]="{
-            'is-invalid': submitted && formControls.confirmpassword.errors
-          }"
-        />
-        <div
-          *ngIf="submitted && formControls.confirmpassword.errors"
-          class="invalid-feedback"
-        >
-          <div
-            *ngIf="formControls.confirmpassword.errors.required"
-            class=" help-block"
-          >
-            Confirm Password is required
-          </div>
-          <div
-            *ngIf="formControls.confirmpassword.errors.mustMatch"
-            class=" help-block"
-          >
-            Passwords must match
-          </div>
-        </div>
-      </div>
-    </div>
       <button type="submit" class="btn">Register</button>
       <button type="submit" class="btn cancel" routerLink="/login">
         Cancel
