--- a/angular/src/app/user/registration/registration.component.scss
+++ b/angular/src/app/user/registration/registration.component.scss
@@ -3,7 +3,6 @@
 .content {
   //width: 50%;
   margin: 20px 50px 20px 50px;
-  text-align: center;
 }
 
 h2 {
@@ -11,19 +10,28 @@ h2 {
   font-size: 5rem;
   font-weight: 900;
 }
-.header_title{
+.header_title {
   font-size: 1.8rem;
   text-align: left;
 }
 
- .section_title {
+.section_title_rqd {
   font-size: 1.4rem;
   float: left;
+}
+
+.section_title_rqd::after {
+  content: "*";
+  color: red;
 }
 .btn {
   background-color: $primary-color;
   font-weight: 700;
   color: $white;
+}
+
+.title,.btn_class{
+  text-align: center;
 }
 
 .cancel {
@@ -36,8 +44,14 @@ h2 {
   text-align: left;
 }
 
-.registration_details, .personal_details{
- display: inline-block;
- box-sizing: border-box;
+.registration_details,
+.personal_details {
+  margin: 2rem 0 2rem 0;
+}
 
+.section {
+  background-color: $light-grey;
+  padding: 2rem;
+  border : $dark-grey 0.1rem solid;
+  border-radius: 1rem;
 }
