--- a/angular/src/styles/_variables.scss
+++ b/angular/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $primary-color: #ec6611;
 $primary-color-dark: #c85808;
 $light-grey: #e5eaee;
+$dark-grey : #a9a9a9;
 $secondary-color: #5594db;
 $secondary-color-dark: #4e7fb0;
 $form-highlighted: #ff0000f8;
