registration form compplete

--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -28,5 +28,5 @@ nav a.active {
   display: flex;
       flex-direction: column;
       min-height: -webkit-fill-available;
-      min-height: 70vh; 
+      //min-height: 70vh; 
 }
