--- a/angular/src/app/user/login-signup-form/placeholders/placeholders.component.html
+++ b/angular/src/app/user/login-signup-form/placeholders/placeholders.component.html
@@ -5,6 +5,9 @@
       <i class="{{ placeholder.icon }} place_icon"></i>
       <span class="place_title">{{ placeholder.title }}</span>
       <div class="place_desc">{{ placeholder.description }}</div>
+      <i class="{{ placeholder.fields.icon }} place_icon"></i>
+      <span class="place_title">{{ placeholder.fields.title }}</span>
+      <div class="place_desc">{{ placeholder.fields.description }}</div>
       </mat-card>
     </div>
   </div>
