adding contentful and formatting files

--- a/angular/src/app/shared/alert/alert.component.html
+++ b/angular/src/app/shared/alert/alert.component.html
@@ -1,7 +1,8 @@
 <div class="container">
-    <div class="content">
-            <div *ngIf="message" [ngClass]="message.cssClass">{{message.text}}
-                    <a class="close" (click)="removeAlert()">&times;</a>
-            </div>
+  <div class="content">
+    <div *ngIf="message" [ngClass]="message.cssClass">
+      {{ message.text }}
+      <a class="close" (click)="removeAlert()">&times;</a>
     </div>
+  </div>
 </div>
