--- a/angular/src/app/user/login-signup-form/login-signup-form.component.scss
+++ b/angular/src/app/user/login-signup-form/login-signup-form.component.scss
@@ -1,36 +1,36 @@
 @import "../../../styles/variables";
-.content{
-    padding: 20px 20px 20px 0;
+.content {
+  padding: 20px 20px 20px 0;
 }
 
-.login-container{
-    text-align:right;
+.login-container {
+  text-align: right;
 }
 
-.form-group{
-    width:30% ;
-    margin-left:auto;
+.form-group {
+  width: 30%;
+  margin-left: auto;
 }
-.title{
-    font-size: 2rem;
-    text-align: left;
+.title {
+  font-size: 2rem;
+  text-align: left;
 }
-.email_title , .password_title{
-    font-size: 1.4rem;
-    float: left;
+.email_title,
+.password_title {
+  font-size: 1.4rem;
+  float: left;
 }
-.btn{
-    background-color:$primary-color;
-    font-weight: 700;
-    color: $white;
-}
-
-.register
-{
-    margin-left: 10px;
+.btn {
+  background-color: $primary-color;
+  font-weight: 700;
+  color: $white;
 }
 
-.help-block{
-    font-size: 1.4rem;
-    color: red;
+.register {
+  margin-left: 10px;
+}
+
+.help-block {
+  font-size: 1.4rem;
+  color: $red;
 }
