--- a/angular/src/app/shared/footer/footer.component.html
+++ b/angular/src/app/shared/footer/footer.component.html
@@ -20,14 +20,16 @@
       <div class="social">
         <h3 class="socials_title">Social</h3>
         <ul class="socials">
-            <li *ngFor="let social of socials" class="socials_link">
-              <a href="{{ social.link }}" target="_blank"><span class="{{social.icon}}"></span></a></li>
-            </ul>
+          <li *ngFor="let social of socials" class="socials_link">
+            <a href="{{ social.link }}" target="_blank"
+              ><span class="{{ social.icon }}"></span
+            ></a>
+          </li>
+        </ul>
       </div>
       <div class="copyright">
         {{ copyright }}
       </div>
     </div>
   </div>
-  
 </footer>
