--- a/angular/src/app/user/login-signup-form/placeholders/placeholders.component.html
+++ b/angular/src/app/user/login-signup-form/placeholders/placeholders.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="content">
-    <div class="col-md-4 placehold_div" *ngFor="let placeholder of placeholders">
+    <div
+      class="col-md-4 placehold_div"
+      *ngFor="let placeholder of placeholders"
+    >
       <mat-card class="placehold">
-      <i class="{{ placeholder.icon }} place_icon"></i>
-      <span class="place_title">{{ placeholder.title }}</span>
-      <div class="place_desc">{{ placeholder.description }}</div>
-      <i class="{{ placeholder.fields.icon }} place_icon"></i>
-      <span class="place_title">{{ placeholder.fields.title }}</span>
-      <div class="place_desc">{{ placeholder.fields.description }}</div>
+        <i class="{{ placeholder.fields.icon }} place_icon"></i>
+        <span class="place_title">{{ placeholder.fields.title }}</span>
+        <div class="place_desc">{{ placeholder.fields.description }}</div>
       </mat-card>
     </div>
   </div>
