show and hide shipping address

--- a/angular/src/app/user/registration/registration.component.html
+++ b/angular/src/app/user/registration/registration.component.html
@@ -345,7 +345,8 @@
             </div>
           </div>
         </div>
-        <div class="shipping_address col-md-6">
+        <input type="checkbox" (click)=toggle()>
+        <div class="shipping_address col-md-6" *ngIf ="show">
           <label class="header_title">
             Shipping Address
           </label>
