--- a/angular/src/app/user/login-signup-form/login-signup-form.component.html
+++ b/angular/src/app/user/login-signup-form/login-signup-form.component.html
@@ -55,6 +55,7 @@
           Password is required
         </div>
       </div>
+      <a routerLink="/forgotpass" class="forgotpass">Forgot your Password!</a>
       <button type="submit" class="btn">Sign In</button>
       <button type="submit" class="btn register" routerLink="/register">
         Register
