--- a/angular/src/app/user/registration/registration.component.html
+++ b/angular/src/app/user/registration/registration.component.html
@@ -345,7 +345,8 @@
             </div>
           </div>
         </div>
-        <input type="checkbox" (click)=toggle()>
+        <!-- <input type="checkbox" (click)=toggle() formControlName="same"> -->
+        <input type="checkbox"  formControlName="same" (change)=toggle($event) > same
         <div class="shipping_address col-md-6" *ngIf ="show">
           <label class="header_title">
             Shipping Address
