changes for validators and password page

--- a/angular/src/app/shared/header/header.component.html
+++ b/angular/src/app/shared/header/header.component.html
@@ -7,6 +7,7 @@
         alt
       />
     </strong>
+    <button mat-button class="home" (click)="home()">Home</button>
     <button mat-button class="contact_us">Contact Us</button>
     <button
       mat-button
