--- a/angular/src/app/shared/header/header.component.scss
+++ b/angular/src/app/shared/header/header.component.scss
@@ -8,7 +8,7 @@ header {
     margin: 15px 0 15px 0;
   }
 }
-.contact_us {
+.contact_us , .home{
   color: $primary-color;
   float: right;
   height: 35px;
